# magic-link

./: .gitignore  Cargo.toml  README.md  old-Cargo.toml
old-src/: main.rs
src/: main.rs
templates/: base.html.tera  error.html.tera  home.html.tera  log-in.html.tera  register-email.html.tera  sign-up.html.tera  validate-email.html.tera
