[package]
name = "magic-link"
version = "0.1.0"
edition = "2021"

[dependencies]
email_address = "0.2.4"
lettre = "0.10.4"
pbkdf2 = { version = "0.12.1", features = ["simple"] }
redis = "0.23.0"
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"]}
sha2 = "0.10.7"
shuttle-rocket = "0.20.0"
shuttle-runtime = "0.20.0"
shuttle-secrets = "0.20.0"
tera = "1"
tokio = "1.26.0"
